--- a/bUtility.Email/bUtility.Email.nuspec
+++ b/bUtility.Email/bUtility.Email.nuspec
@@ -7,7 +7,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>http://biks.lcl</licenseUrl>
-    <projectUrl>http://biks.lcl</projectUrl>
+    <projectUrl>https://github.com/BikS2013/bUtility</projectUrl>
     <iconUrl>http://biks.lcl</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
