--- a/bUtility.WebApi/bUtility.WebApi.nuspec
+++ b/bUtility.WebApi/bUtility.WebApi.nuspec
@@ -14,6 +14,11 @@
     <releaseNotes>simple webApi utility.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>biks webApi utility</tags>
+    <dependencies>
+      <group>
+        <dependency id="biks.butility" version="0.0.0.3" />
+      </group>
+    </dependencies>
   </metadata>
 </package>
 
