--- a/bUtility.Email/bUtility.Email.nuspec
+++ b/bUtility.Email/bUtility.Email.nuspec
@@ -14,6 +14,11 @@
     <releaseNotes>simple email utility.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>biks email utility</tags>
+    <dependencies>
+      <group>
+        <dependency id="bUtility" version="0.0.0.4" />
+      </group>
+    </dependencies>
   </metadata>
 </package>
 
