--- a/bUtility.Sts/bUtility.Sts.csproj
+++ b/bUtility.Sts/bUtility.Sts.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.2.206221351\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.ValidatingIssuerNameRegistry.4.5.1\lib\net45\System.IdentityModel.Tokens.ValidatingIssuerNameRegistry.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -64,9 +68,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelyingPartyExtensions.cs" />
     <Compile Include="RequestScope.cs" />
+    <Compile Include="client\SecurityTokenResolver.cs" />
     <Compile Include="SimpleSts.cs" />
     <Compile Include="SimpleStsConfiguration.cs" />
     <Compile Include="constants\TokenTypes.cs" />
+    <Compile Include="client\ValidatingIssuerNameRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bUtility.snk" />
@@ -86,6 +92,7 @@
   <ItemGroup>
     <None Include="_CreateNewNuGetPackage\DoNotModify\NuGet.exe" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>REM Create a NuGet package for this project and place the .nupkg file in the project's output directory.
