--- a/bUtility.Sts/packages.config
+++ b/bUtility.Sts/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.8" targetFramework="net45" developmentDependency="true" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net45" />
 </packages>
