--- a/bUtility.Sts.MvcClient/bUtility.Sts.MvcClient.csproj
+++ b/bUtility.Sts.MvcClient/bUtility.Sts.MvcClient.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>bUtility.Sts.MvcClient</RootNamespace>
     <AssemblyName>bUtility.Sts.MvcClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -224,7 +224,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51454</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51454/</IISUrl>
+          <IISUrl>http://localhost/bUtility.Sts.MvcClient</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
