--- a/bUtility.Sts.MvcClient/Configuration/Common/System.IdentityModel.Services.config
+++ b/bUtility.Sts.MvcClient/Configuration/Common/System.IdentityModel.Services.config
@@ -4,7 +4,7 @@
     <cookieHandler requireSsl="true"/>
     <!-- Careful with the trailing slash! -->
     <!-- http://stackoverflow.com/questions/4460720/error-a-signinresponse-message-may-only-redirect-within-the-current-web-applic -->
-    <wsFederation passiveRedirectEnabled="true" issuer="https://localhost/bUtility.Sts.MvcSample/Account/Index"
+    <wsFederation passiveRedirectEnabled="true" issuer="https://localhost/bUtility.Sts.MvcServer/Account/Index"
               realm="https://localhost/bUtility.Sts.MvcClient/" requireHttps="true" />
   </federationConfiguration>
 </system.identityModel.services>
