--- a/bUtility.Sts.MvcServer/bUtility.Sts.MvcServer.csproj
+++ b/bUtility.Sts.MvcServer/bUtility.Sts.MvcServer.csproj
@@ -9,14 +9,14 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CA8DD060-F005-4174-BE62-3E65A726632B}</ProjectGuid>
+    <ProjectGuid>{29ADEC23-C6E2-4ADF-9FD8-6AC676AC0D2C}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>bUtility.Sts.MvcClient</RootNamespace>
-    <AssemblyName>bUtility.Sts.MvcClient</AssemblyName>
+    <RootNamespace>bUtility.Sts.MvcServer</RootNamespace>
+    <AssemblyName>bUtility.Sts.MvcServer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -76,6 +76,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -115,9 +116,20 @@
     <Reference Include="System.Web.Mvc">
       <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
@@ -125,10 +137,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\SampleController.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -137,71 +152,29 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Configuration\Common\appSettings.config" />
+    <Content Include="Configuration\Common\STS.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Configuration\Common\System.Diagnostics.config" />
+    <Content Include="Configuration\Common\System.Net\ConnectionManagement.config" />
+    <Content Include="Configuration\Common\System.Web\Authentication.config" />
+    <Content Include="Configuration\Common\System.Web\authorization.config" />
+    <Content Include="Configuration\Common\System.Web\Compilation.config" />
+    <Content Include="Configuration\Common\System.Web\Globalization.config" />
+    <Content Include="Configuration\Common\System.Web\HttpCookies.config" />
+    <Content Include="Configuration\Common\System.Web\HttpRuntime.config" />
+    <Content Include="Configuration\Common\System.Web\MachineKey.config" />
+    <Content Include="Configuration\Common\System.Web\Pages.config" />
+    <Content Include="Configuration\Common\System.Web\SessionState.config" />
+    <Content Include="Configuration\Common\System.WebServer\Handlers.config" />
+    <Content Include="Configuration\Common\System.WebServer\HttpProtocol.config" />
+    <Content Include="Configuration\Common\System.WebServer\Modules.config" />
+    <Content Include="Views\Account\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\appSettings.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Diagnostics.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Net\ConnectionManagement.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\authorization.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\Compilation.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\Globalization.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\HttpCookies.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\HttpRuntime.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\MachineKey.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\Pages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.Web\SessionState.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.WebServer\Handlers.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.WebServer\HttpProtocol.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.WebServer\Modules.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Debug\System.Web\Compilation.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Debug\System.Web\HttpRuntime.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\_ViewStart.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_Layout.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Sample\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Common\System.IdentityModel.config" />
-    <Content Include="Configuration\Common\System.IdentityModel.Services.config" />
+    <Folder Include="Configuration\Debug\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\bUtility.Sts\bUtility.Sts.csproj">
@@ -209,9 +182,27 @@
       <Name>bUtility.Sts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="certificates\issuer.model.local.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuration\azure\STS.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <None Include="Properties\PublishProfiles\bUtilityStsServer - Web Deploy.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'azure|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
@@ -222,9 +213,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>51454</DevelopmentServerPort>
+          <DevelopmentServerPort>63016</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/bUtility.Sts.MvcClient</IISUrl>
+          <IISUrl>http://localhost:63016/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
