--- a/bUtility.Sts.MvcServer/Configuration/azure/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/azure/STS.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0"?>
 <bUtility.Sts>
   <relyingParties>
-    <rp name="test" tokenLifeTime="480" issuerName="simpleSTS"
-        redirectUrl="https://localhost/bUtility.Sts.MvcClient/Sample/index"
-        realm="https://localhost/bUtility.Sts.MvcClient/"
+    <rp name="test" tokenLifeTime="480" issuerName="simpleSTS@azure"
+        redirectUrl="https://butilitystsclient.azurewebsites.net/sample/index"
+        realm="https://butilitystsclient.azurewebsites.net/"
         authenticationUrl="https://butilitystsserver.azurewebsites.net/Account/index/test"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" 
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>    </rp>
+    <rp name="testLocal" tokenLifeTime="480" issuerName="simpleSTS@azure"
+        redirectUrl="https://localhost/bUtility.Sts.MvcClient/sample/index"
+        realm="https://localhost/bUtility.Sts.MvcClient/"
+        authenticationUrl="https://butilitystsserver.azurewebsites.net/Account/index/test"
+        tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
   </relyingParties>
 </bUtility.Sts>
