--- a/bUtility.Sts.MvcClient/Web.config
+++ b/bUtility.Sts.MvcClient/Web.config
@@ -22,6 +22,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
