--- a/bUtility.Sts.MvcClient/bUtility.Sts.MvcClient.csproj
+++ b/bUtility.Sts.MvcClient/bUtility.Sts.MvcClient.csproj
@@ -185,12 +185,6 @@
     <Content Include="Configuration\Common\System.WebServer\Modules.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Configuration\Debug\System.Web\Compilation.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration\Debug\System.Web\HttpRuntime.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -209,9 +203,28 @@
       <Name>bUtility.Sts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuration\azure\System.IdentityModel.Services.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuration\azure\System.IdentityModel.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuration\Debug\System.IdentityModel.config" />
+    <None Include="Properties\PublishProfiles\bUtilityStsClient - Web Deploy.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'azure|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
