--- a/bUtility.Sts.MvcClient/Configuration/azure/System.IdentityModel.config
+++ b/bUtility.Sts.MvcClient/Configuration/azure/System.IdentityModel.config
@@ -3,6 +3,10 @@
   <identityConfiguration saveBootstrapContext="true">
     <tokenReplayDetection enabled="true"/>
     <securityTokenHandlers>
+      <!--http://www.cloudidentity.com/blog/2013/01/28/running-wif-based-apps-in-windows-azure-web-sites-4/?-->
+      <add type="System.IdentityModel.Services.Tokens.MachineKeySessionSecurityTokenHandler,System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <remove type="System.IdentityModel.Tokens.SessionSecurityTokenHandler, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      
       <securityTokenHandlerConfiguration>
         <certificateValidation certificateValidationMode="None"/>
         <serviceTokenResolver type="bUtility.Sts.SecurityTokenResolver, bUtility.Sts"/>
