--- a/bUtility.Dapper/bUtility.Dapper.csproj
+++ b/bUtility.Dapper/bUtility.Dapper.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +58,7 @@
     <Compile Include="DDLInfo.cs" />
     <Compile Include="Guid2StringMapper.cs" />
     <Compile Include="DMLExtensions.cs" />
+    <Compile Include="Object2StringMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Statements.cs" />
   </ItemGroup>
