--- a/bUtility.Dapper/packages.config
+++ b/bUtility.Dapper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.8" targetFramework="net45" developmentDependency="true" />
   <package id="Dapper" version="1.42" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
 </packages>
