vs:EnableBrowserLink false in appSettings

--- a/bUtility.Sts.MvcServer/Configuration/Common/appSettings.config
+++ b/bUtility.Sts.MvcServer/Configuration/Common/appSettings.config
@@ -4,7 +4,7 @@
   <add key="webpages:Enabled" value="false" />
   <add key="ClientValidationEnabled" value="true" />
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  
-  <add key="OnErrorRedirectUrl" value="https://github.com/BikS2013/bUtility" />
 
+  <add key="vs:EnableBrowserLink" value="false" />
+  <add key="OnErrorRedirectUrl" value="https://github.com/BikS2013/bUtility" />
 </appSettings>
