--- a/bUtility.Sts.MvcClient/Configuration/Current/appSettings.config
+++ b/bUtility.Sts.MvcClient/Configuration/Current/appSettings.config
@@ -4,7 +4,8 @@
   <add key="webpages:Enabled" value="false" />
   <add key="ClientValidationEnabled" value="true" />
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  
+
+  <add key="vs:EnableBrowserLink" value="false" />
   <add key="OnErrorRedirectUrl" value="https://github.com/BikS2013/bUtility" />
 
 </appSettings>
