--- a/bUtility/bUtility.csproj
+++ b/bUtility/bUtility.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="RegistryExceptionLog.cs" />
     <Compile Include="SimpleExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
