--- a/bUtility.Sts.ApiClient/Configuration/Common/appSettings.config
+++ b/bUtility.Sts.ApiClient/Configuration/Common/appSettings.config
@@ -6,6 +6,8 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
   <add key="vs:EnableBrowserLink" value="false" />
+  <add key="basehRef" value="/bUtility.Sts.ApiClient/" />
+  <add key="libhRef" value="https://localhost/bUtility.Sts.ApiClient/bower_components/" />
   <add key="OnErrorRedirectUrl" value="https://github.com/BikS2013/bUtility" />
 
 </appSettings>
