--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,7 @@ node_modules/
 bower_components/
 public/
 [Cc]onfiguration/[Cc]urrent/
+/bUtility.Sts.ApiClient/[Cc]onfiguration/[Cc]urrent
+/bUtility.Sts.MvcClient/[Cc]onfiguration/[Cc]urrent
+/bUtility.Sts.MvcServer/[Cc]onfiguration/[Cc]urrent
+/CardActivation
