--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,6 @@ public/
 /CardActivation
 Current
 Current
+/Programming Windows Identity Foundation.pdf
+/Microsoft Windows Identity Foundation Cookbook.pdf
+.vs
