--- a/bUtility.Sts/bUtility.Sts.csproj
+++ b/bUtility.Sts/bUtility.Sts.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Configuration\RelyingParties.cs" />
     <Compile Include="Configuration\StsConfiguration.cs" />
     <Compile Include="constants\Federation.cs" />
+    <Compile Include="GenericExtensions.cs" />
     <Compile Include="IgnoreCertificateErrorsValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelyingPartyExtensions.cs" />
