--- a/bUtility.Sts.ApiClient/Web.config
+++ b/bUtility.Sts.ApiClient/Web.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
+
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
+  
   -->
 <configuration>
   <configSections>
@@ -10,22 +12,18 @@
   </configSections>
   <appSettings configSource="Configuration\Current\appSettings.config" />
   <system.web>
-    <authorization configSource="Configuration\Current\System.Web\authorization.config" />
+    <!--<authorization configSource="Configuration\Current\System.Web\authorization.config" />-->
     <httpCookies configSource="Configuration\Current\System.Web\HttpCookies.config" />
     <httpRuntime configSource="Configuration\Current\System.Web\HttpRuntime.config" />
     <compilation configSource="Configuration\Current\System.Web\Compilation.config" />
     <sessionState configSource="Configuration\Current\System.Web\SessionState.config" />
     <machineKey configSource="Configuration\Current\System.Web\MachineKey.config" />
-    <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-    </httpModules>
     <customErrors mode="Off" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers configSource="Configuration\Current\System.WebServer\Handlers.config" />
-    <!--<httpProtocol configSource="Configuration\Current\System.WebServer\HttpProtocol.config"/>-->
-    <modules configSource="Configuration\Current\System.WebServer\Modules.config" />
+    <!--<modules configSource="Configuration\Current\System.WebServer\Modules.config" />-->
     <staticContent>
       <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
@@ -43,7 +41,7 @@
   </system.webServer>
   <system.identityModel configSource="Configuration\Current\System.IdentityModel.config" />
   <system.identityModel.services configSource="Configuration\Current\System.IdentityModel.Services.config" />
-  <system.diagnostics configSource="Configuration\Current\System.Diagnostics.config" />
+  <!--<system.diagnostics configSource="Configuration\Current\System.Diagnostics.config" />-->
   <system.net>
     <defaultProxy useDefaultCredentials="true" />
     <connectionManagement configSource="Configuration\Current\System.Net\ConnectionManagement.config" />
