--- a/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.config
+++ b/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.config
@@ -4,17 +4,16 @@
     <tokenReplayDetection enabled="true"/>
     <securityTokenHandlers>
       <securityTokenHandlerConfiguration>
-        <!--<certificateValidation trustedStoreLocation="LocalMachine" certificateValidationMode="None"/>-->
+        <!--<certificateValidation certificateValidationMode="PeerOrChainTrust" trustedStoreLocation="LocalMachine"/>-->
         <certificateValidation certificateValidationMode="None"/>
-        <serviceTokenResolver type="bUtility.Sts.SecurityTokenResolver, bUtility.Sts"/>
+        <!--<serviceTokenResolver type="bUtility.Sts.SecurityTokenResolver, bUtility.Sts"/>-->
         <audienceUris>
-          <add value="https://localhost/bUtility.Sts.ApiClient/"/>
-          <add value="https://butilityapiclient.azurewebsites.net/"/>
+          <add value="https://myStsSampleApp/"/>
         </audienceUris>
+        <!-- thumbprint of issuer.model.local -->
         <issuerNameRegistry type="bUtility.Sts.ValidatingIssuerNameRegistry, bUtility.Sts">
-          <authority name="simpleSTS@azure">
+          <authority name="defaultAuthority">
             <keys>
-              <!-- thumbprint of issuer.model.local -->
               <add thumbprint="0ef97375f7c6eaa7c2c6b282f7dc09c370ac91c6"/>
             </keys>
             <validIssuers>
@@ -24,8 +23,5 @@
         </issuerNameRegistry>
       </securityTokenHandlerConfiguration>
     </securityTokenHandlers>
-    <!--certificationValidationMode set to "None" by the the Identity and Access Tool for Visual Studio. For development purposes.-->
-    <!--<certificateValidation certificateValidationMode="None" trustedStoreLocation="LocalMachine"/>-->
-    <!--<certificateValidation certificateValidationMode="None" />-->
   </identityConfiguration>
 </system.identityModel>
