--- a/bUtility.Sts.ApiClient/Web.config
+++ b/bUtility.Sts.ApiClient/Web.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
-
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
-  
   -->
 <configuration>
   <configSections>
@@ -11,8 +9,9 @@
     <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
   </configSections>
   <appSettings configSource="Configuration\Current\appSettings.config" />
+  <!--<system.web configSource="Configuration\Current\System.Web.config" />-->
   <system.web>
-    <!--<authorization configSource="Configuration\Current\System.Web\authorization.config" />-->
+    <authorization configSource="Configuration\Current\System.Web\authorization.config" />
     <httpCookies configSource="Configuration\Current\System.Web\HttpCookies.config" />
     <httpRuntime configSource="Configuration\Current\System.Web\HttpRuntime.config" />
     <compilation configSource="Configuration\Current\System.Web\Compilation.config" />
@@ -23,7 +22,7 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers configSource="Configuration\Current\System.WebServer\Handlers.config" />
-    <!--<modules configSource="Configuration\Current\System.WebServer\Modules.config" />-->
+    <modules configSource="Configuration\Current\System.WebServer\Modules.config" />
     <staticContent>
       <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
