--- a/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
@@ -18,7 +18,7 @@
     </rp>
     <rp name="testApiLocal" tokenLifeTime="480" issuerName="simpleSTS@azure"
         redirectUrl="https://localhost/bUtility.Sts.ApiClient/"
-        realm="https://localhost/bUtility.Sts.ApiClient/"
+        realm="https://myStsSampleApp/"
         authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
         tokenType="urn:oasis:names:tc:SAML:1.0:assertion">
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
