--- a/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.Services.config
+++ b/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.Services.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0"?>
 <system.identityModel.services >
   <federationConfiguration >
-    <cookieHandler requireSsl="true"/>
+    <cookieHandler requireSsl="true" name="mAuth"/>
     <!-- Careful with the trailing slash! -->
     <!-- http://stackoverflow.com/questions/4460720/error-a-signinresponse-message-may-only-redirect-within-the-current-web-applic -->
-    <wsFederation passiveRedirectEnabled="true" issuer="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
-              realm="https://localhost/bUtility.Sts.ApiClient" requireHttps="true" />
+    <wsFederation passiveRedirectEnabled="true" issuer="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal4jwt"
+              realm="https://myStsSampleApp/" requireHttps="true" />
   </federationConfiguration>
 </system.identityModel.services>
