--- a/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.config
+++ b/bUtility.Sts.ApiClient/Configuration/Debug/System.IdentityModel.config
@@ -3,9 +3,11 @@
   <identityConfiguration saveBootstrapContext="true">
     <tokenReplayDetection enabled="true"/>
     <securityTokenHandlers>
+      <add type="bUtility.Sts.JWTSecurityTokenHandlerFix, bUtility.Sts" />
       <securityTokenHandlerConfiguration>
         <!--<certificateValidation certificateValidationMode="PeerOrChainTrust" trustedStoreLocation="LocalMachine"/>-->
         <certificateValidation certificateValidationMode="None"/>
+        <!--<serviceTokenResolver type="bUtility.Sts.SecurityTokenResolver, bUtility.Sts"/>-->
         <!--<serviceTokenResolver type="bUtility.Sts.SecurityTokenResolver, bUtility.Sts"/>-->
         <audienceUris>
           <add value="https://myStsSampleApp/"/>
