--- a/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
+++ b/bUtility.Sts.MvcServer/Configuration/Debug/STS.config
@@ -24,5 +24,21 @@
       <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
                                   resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
     </rp>
+    <rp name="testApiLocal4saml2" tokenLifeTime="480" issuerName="simpleSTS@azure"
+        redirectUrl="https://localhost/bUtility.Sts.ApiClient/"
+        realm="https://myStsSampleApp/"
+        authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
+        tokenType="urn:oasis:names:tc:SAML:2.0:assertion">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
+    <rp name="testApiLocal4jwt" tokenLifeTime="480" issuerName="simpleSTS@azure"
+        redirectUrl="https://localhost/bUtility.Sts.ApiClient/"
+        realm="https://myStsSampleApp/"
+        authenticationUrl="https://localhost/bUtility.Sts.MvcServer/Account/index/testApiLocal"
+        tokenType="urn:ietf:params:oauth:token-type:jwt">
+      <embeddedSigningCertificate assemblyName="bUtility.Sts.MvcServer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"
+                                  resourceName="bUtility.Sts.MvcServer.certificates.issuer.model.local.pfx" password="123456"/>
+    </rp>
   </relyingParties>
 </bUtility.Sts>
