--- a/bUtility.Sts.ApiClient/bUtility.Sts.ApiClient.csproj
+++ b/bUtility.Sts.ApiClient/bUtility.Sts.ApiClient.csproj
@@ -54,6 +54,10 @@
     </Reference>
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.identitymodel.services" />
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=4.0.20622.1351, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.4.0.2.206221351\lib\net45\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -93,7 +97,9 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="sample.html" />
-    <Content Include="sampleToken.xml" />
+    <Content Include="sampleJwtToken.xml" />
+    <Content Include="sampleSaml2Token.xml" />
+    <Content Include="sampleSaml11Token.xml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -186,6 +192,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Configuration\Common\System.Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="issuer.model.local.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="issuer.model.local.cer" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
