--- a/bUtility.Sts.ApiClient/packages.config
+++ b/bUtility.Sts.ApiClient/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net45" />
 </packages>
