butility.sts package

--- a/bUtility.Sts/bUtility.Sts.csproj
+++ b/bUtility.Sts/bUtility.Sts.csproj
@@ -79,6 +79,7 @@
     <Compile Include="client\ValidatingIssuerNameRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bUtility.Sts.nuspec" />
     <None Include="bUtility.snk" />
     <None Include="packages.config" />
     <None Include="_CreateNewNuGetPackage\Config.ps1" />
