--- a/bUtility.Sts.ApiClient/bower.json
+++ b/bUtility.Sts.ApiClient/bower.json
@@ -2,7 +2,7 @@
   "name": "apiClient",
   "homepage": "https://github.com/BikS2013/bUtility",
   "authors": [
-    "Giorgos Marinos <biks@nbg.gr>"
+    "Giorgos Marinos <giorgos.marinos@gmail.com>"
   ],
   "description": "",
   "main": "",
