bUtility.Dapper signing

--- a/bUtility.Dapper/bUtility.Dapper.csproj
+++ b/bUtility.Dapper/bUtility.Dapper.csproj
@@ -33,8 +33,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>bUtility.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -64,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bUtility.Dapper.nuspec" />
+    <None Include="bUtility.snk" />
     <None Include="packages.config" />
     <None Include="_CreateNewNuGetPackage\Config.ps1" />
     <None Include="_CreateNewNuGetPackage\DoNotModify\CreateNuGetPackage.ps1" />
