--- a/bUtility.WebApi/bUtility.WebApi.csproj
+++ b/bUtility.WebApi/bUtility.WebApi.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticationHeaderHandler.cs" />
     <Compile Include="ConfigurationProxy.cs" />
     <Compile Include="CustomAssembliesResolver.cs" />
     <Compile Include="exceptionFilters\ExceptionHandlingAttribute.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="handlers\AuthenticationHandler.cs" />
     <Compile Include="authorizationFilters\ClaimsAuthorizeAttribute.cs" />
+    <Compile Include="RequiresAuthenticationHandler.cs" />
     <Compile Include="types\IExceptionContainer.cs" />
     <Compile Include="NoCacheAttribute.cs" />
     <Compile Include="NotFoundResolution\ActionSelector.cs" />
@@ -107,6 +109,10 @@
     <ProjectReference Include="..\bUtility.Logging\bUtility.Logging.csproj">
       <Project>{F1EB3EDC-9862-4879-845E-2836F52D694C}</Project>
       <Name>bUtility.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\bUtility.SecurityToken\bUtility.SecurityToken.csproj">
+      <Project>{162b6672-77f1-4037-81a0-a7d9318a857f}</Project>
+      <Name>bUtility.SecurityToken</Name>
     </ProjectReference>
     <ProjectReference Include="..\bUtility.Sts\bUtility.Sts.csproj">
       <Project>{93159ed4-1d44-40d2-a928-2cab3e234974}</Project>
